fix(wai): improve contrast ratio

--- a/src/scss/components/_tags.scss
+++ b/src/scss/components/_tags.scss
@@ -25,10 +25,12 @@
 
   .express {
     background-color: #b565a7;
+    color: #000;
   }
 
   .git {
-    background-color: #dd4132;
+    background-color: #f14e32;
+    color: #100;
   }
 
   .network {
@@ -52,6 +54,7 @@
 
   .vue {
     background-color: #00a591;
+    color: #200;
   }
 
   .js {
@@ -66,6 +69,7 @@
 
   .css {
     background-color: #bc70a4;
+    color: #111;
   }
 
   .babel {
@@ -79,6 +83,7 @@
 
   .services {
     background-color: #f7786b;
+    color: #111;
   }
 
   .libraries {
